# Sonar

./: .gitignore  README.md  analysis_results.md  design.md  implementation_plan.md  project_desc.md  pyproject.toml  requirements.txt  scratch_proto.py
.github/workflows/: publish.yml
scripts/: send_fake_span.py  verify_pipeline.py
sonar/: __init__.py  main.py  requirements.txt
sonar/core/: __init__.py  tree_builder.py
sonar/ingestion/: __init__.py  grpc_server.py  models.py  server.py  store.py
sonar/tests/: __init__.py  test_helpers.py  test_integration.py  test_models.py  test_server.py  test_store.py  test_tree_builder.py
sonar/ui/: __init__.py  app.py
